# startech-installer

./: .gitignore  README.md  README.txt  create-icon.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CompletionScreen.tsx  LanguageToggle.tsx  Logo.tsx  ProgressScreen.tsx  WelcomeScreen.tsx
